fix: add overflow property to main section for improved layout

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1079,6 +1079,7 @@ main {
   font-weight: 400;
   line-height: 0.9;
   color: #050505;
+  overflow:hidden
 }
 
 .page-9-copy-right-body {
